# cae-cli

./: .gitignore  AGENTS.md  CLAUDE.md  DEVELOPMENT_LOG.md  DEV_LOG.md  README.md  cae.bat  docker.yml  pyproject.toml  test_ccx_batch.py
.github/workflows/: README.md  ci-cd.yml
cae/: __init__.py  _utils.py  enums.py  main.py  mcp_server.py
cae-gui/: README.md  dev.ps1  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
cae-gui/src/: App.vue  env.d.ts  main.ts  style.css
cae-gui/src-tauri/: Cargo.toml  tauri.conf.json
cae-gui/src-tauri/capabilities/: default.json
cae-gui/src-tauri/src/: lib.rs  main.rs
cae/ai/: __init__.py  cad_generator.py  diagnose.py  diagnosis_history.py  explain.py  extract_reference_data.py  fix_rules.py  llm_client.py  prompts.py  reference_cases.py  solver_output.py  stream_handler.py  suggest.py
cae/config/: __init__.py
cae/contact/: __init__.py  (+6 more)
examples/: simple_beam.inp
logo/: README.md
results_verify/: achtel2.inp
scripts/: export_finetune_dataset.py  export_rule_correction_dataset.py  generate_2000_training_data.py  install-docker-wsl.sh  setup-cae-cli-docker-wsl.ps1
tests/: CalculiX 求解器单元测试.py  mesh 模块单元测试.py  test_ai_diagnosis_evidence_enhancements.py  test_ai_model_resolution.py  test_autofix_verification.py  test_diagnose_json_cli.py  test_diagnosis_history_guardrails.py  test_diagnosis_step_balance.py  test_docker_feature.py  test_mcp_server.py  test_safe_autofix_whitelist.py  test_solve_result_output.py  test_solver_output_bridge.py  viewer 模块单元测试.py  可视化模块单元测试.py  诊断规则批量测试.py
(+128 files in other folders)
